Fixed phone issue with horz scroll
- Moved bootstrap css to asset pipeline instead of webpack, so that
  it's easier to use mixins etc
- Made smaller screen resolutions (mainly phone) have a font-size of 12
  instead of 16, so they wouldn't have weird horizontal scrolling problems.

Fixes #6

--- a/app/assets/stylesheets/application/layout.css.scss
+++ b/app/assets/stylesheets/application/layout.css.scss
@@ -46,6 +46,15 @@ $gray: #35373f;
   color: black;
 }
 
+html {
+  font-size: 12px;
+}
+
+@include media-breakpoint-up(sm) {
+  html {
+    font-size: 16px;
+  }
+}
 
 body {
   background: $black;
